 * Added support for curves GOST R 34.10-2001 and GOST R 34.10-2012.

 * Improved performance of KDF functions.

 * Improved ECDSA compliance.

 * Moved locking out to libgpg-error.

 * Fixed message digest lookup by OID (regression in 1.6.0).

 * Fixed a build problem on NetBSD.

 * Fixed memory leaks in ECC code.

 * Fixed some asm build problems and feature detection bugs.

 * Added OCB mode.

 * Interface changes relative to the 1.6.0 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 gcry_mac_get_algo               NEW.
 GCRY_MAC_HMAC_MD2               NEW.
 GCRY_MD_FLAG_BUGEMU1            NEW.
 GCRYCTL_SET_SBOX                NEW.
 gcry_cipher_set_sbox            NEW macro.
 GCRY_MD_GOSTR3411_CP            NEW.
 gcry_mpi_ec_sub                 NEW.
 GCRY_CIPHER_MODE_OCB            NEW.
 GCRYCTL_SET_TAGLEN              NEW.
 gcry_cipher_final               NEW macro.


Noteworthy changes in version 1.6.0 (2013-12-16)
------------------------------------------------

 * Removed the long deprecated gcry_ac interface.  Thus Libgcrypt is
   not anymore ABI compatible to previous versions if they used the ac
   interface.

 * Removed the module register subsystem.

 * The deprecated message digest debug macros have been removed.  Use
   gcry_md_debug instead.

 * Removed deprecated control codes.

 * Improved performance of most cipher algorithms as well as for the
   SHA family of hash functions.

 * Added support for the IDEA cipher algorithm.

 * Added support for the Salsa20 and reduced Salsa20/12 stream ciphers.

 * Added limited support for the GOST 28147-89 cipher algorithm.

 * Added support for the GOST R 34.11-94 and R 34.11-2012 (Stribog)
   hash algorithms.

 * Added a random number generator to directly use the system's RNG.
   Also added an interface to prefer the use of a specified RNG.

 * Added support for the SCRYPT algorithm.

 * Mitigated the Yarom/Falkner flush+reload side-channel attack on RSA